# tokenizers

.github/workflows/: build-multi-platform.yml
bindings/c/: Cargo.toml  README.md
bindings/c/src/: lib.rs
bindings/c/src/encoding/: methods.rs  mod.rs
bindings/c/src/models/: bpe.rs  mod.rs  unigram.rs  wordlevel.rs  wordpiece.rs
bindings/c/src/normalizers/: bert.rs  byte_level.rs  lowercase.rs  mod.rs  nmt.rs  prepend.rs  replace.rs  strip.rs  strip_accents.rs  unicode.rs
bindings/c/src/pre_tokenizers/: bert.rs  byte_level.rs  char_delimiter_split.rs  digits.rs  metaspace.rs  mod.rs  punctuation.rs  split.rs  unicode_scripts.rs  whitespace.rs  whitespace_split.rs
